--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color: black;
+    background-color: #171717;
     width: 100%;
     border-radius: 50px 50px 50px 50px;
     background-color: rgba(0, 0, 0, 0.9);
@@ -56,7 +56,7 @@ img {
 
 h1 {
     font-size: 22px;
-    color: black;
+    color: #171717;
     text-align: center;
 }
 
@@ -104,9 +104,6 @@ p {
     text-align: center;
 }
 
-nav a {
-    text-decoration: none;
-}
 
 .valores {
     padding-top: 30px;
@@ -183,4 +180,79 @@ footer {
     font-size: 12px;
     border-top: 1px solid #444;
     margin-top: 10px;
+}
+
+/* Estilos básicos para el menú */
+nav {
+    position: relative;
+    background-color: #171717;
+    padding: 10px;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: flex-start;
+}
+
+nav ul li {
+    margin: 10px;
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+    display: block;
+}
+
+/* Estilos del menú hamburguesa */
+.hamburger {
+    display: none;
+    cursor: pointer;
+    flex-direction: column;
+    gap: 5px;
+    width: 30px;
+    height: 20px;
+}
+
+.hamburger span {
+    display: block;
+    width: 100%;
+    height: 5px;
+    background-color: white;
+}
+
+/* Estilo para el menú cuando se está visualizando en pantallas pequeñas */
+@media (max-width: 768px) {
+    nav ul {
+        display: none;
+        flex-direction: column;
+        background-color: #171717;
+        position: absolute;
+        top: 50px;
+        left: 0;
+        width: 100%;
+        margin-top: 0;
+
+    }
+
+    nav ul.show {
+        display: flex;
+    }
+
+    .hamburger {
+        display: flex;
+        margin-top: 13px;
+    }
+
+    img {
+        width: 100px;
+        align-items: center;
+        padding-bottom: 11px;
+    }
+
+    
 }
