--- a/css/style.css
+++ b/css/style.css
@@ -225,34 +225,34 @@ nav ul li a {
     background-color: white;
 }
 
-/* Estilo para el menú cuando se está visualizando en pantallas pequeñas */
+body, html {
+    overflow-x: visible; /* Permite que el contenido que se desborde horizontalmente sea visible */
+}
+
 @media (max-width: 768px) {
     nav ul {
-        display: none;
+        display: none;  /* Menú oculto inicialmente */
         flex-direction: column;
         background-color: #171717;
         position: absolute;
         top: 50px;
-        left: 0;
-        width: 100%;
+        right: 0;
         margin-top: 0;
-
     }
 
+    /* Mostrar el menú cuando se activa la clase .show */
     nav ul.show {
         display: flex;
     }
 
     .hamburger {
         display: flex;
-        margin-top: 13px;
+        margin-top: 10px;
     }
 
     img {
         width: 100px;
         align-items: center;
-        padding-bottom: 11px;
+        padding-bottom: 10px;
     }
-
-    
 }
