--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,12 @@ header {
     justify-content: space-between;
     background-color: #171717;
     width: 100%;
-    border-radius: 50px 50px 50px 50px;
     background-color: rgba(0, 0, 0, 0.9);
 }
 
 header img {
     width: 130px;
-    padding-top: 11.5px;
+    padding-top: 15px;
     padding-left: 30px;
 }
 
@@ -29,23 +28,15 @@ header ul {
     list-style: none;
     display: flex;
     flex-direction: row;
-    padding-right: 30px;
-    padding-top: 12px;
-
 }
 
 header ul li {
-    margin: 10px;
     color: white;
 }
 
 .header-box {
-    padding-top: 15PX;
-    margin-left: 10px;
-    margin-right: 10px;
     position: fixed;
-    top: 1;
-    width: 98.5%;          /* Ocupa todo el ancho de la pantalla */
+    width: 100%;          /* Ocupa todo el ancho de la pantalla */
 
 }
 
@@ -70,7 +61,6 @@ p {
     flex-direction: row;
     width: 100%;
     margin: 10px 0 10px 0;
-    padding-top: 30px;
     align-items: center;
 }
 
@@ -247,12 +237,20 @@ body, html {
 
     .hamburger {
         display: flex;
-        margin-top: 10px;
+        margin-top: 16px;
     }
 
     img {
         width: 100px;
         align-items: center;
-        padding-bottom: 10px;
+        padding-bottom: 16px;
     }
+
+    .box p {
+        font-size: 30px;
+        margin: auto;
+        font-size: medium;
+        text-align: center;
+    }
+
 }
