--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ header ul li {
 
 .header-box {
     position: fixed;
-    width: 100%;          /* Ocupa todo el ancho de la pantalla */
+    width: 100%;    
 
 }
 
@@ -172,7 +172,6 @@ footer {
     margin-top: 10px;
 }
 
-/* Estilos básicos para el menú */
 nav {
     position: relative;
     background-color: #171717;
@@ -198,7 +197,6 @@ nav ul li a {
     display: block;
 }
 
-/* Estilos del menú hamburguesa */
 .hamburger {
     display: none;
     cursor: pointer;
@@ -216,12 +214,12 @@ nav ul li a {
 }
 
 body, html {
-    overflow-x: visible; /* Permite que el contenido que se desborde horizontalmente sea visible */
+    overflow-x: visible;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 980px) {
     nav ul {
-        display: none;  /* Menú oculto inicialmente */
+        display: none; 
         flex-direction: column;
         background-color: #171717;
         position: absolute;
@@ -230,7 +228,6 @@ body, html {
         margin-top: 0;
     }
 
-    /* Mostrar el menú cuando se activa la clase .show */
     nav ul.show {
         display: flex;
     }
@@ -244,13 +241,6 @@ body, html {
         width: 100px;
         align-items: center;
         padding-bottom: 16px;
-    }
-
-    .box p {
-        font-size: 30px;
-        margin: auto;
-        font-size: medium;
-        text-align: center;
     }
 
 }
