--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@
     font-family: 'Roboto', sans-serif;
 }
 
+/* Header section*/
+
+
 .size-img {
     width: 50%;
     height: auto;
@@ -45,6 +48,9 @@ img {
     align-items: center;
 }
 
+/* Products section*/
+
+
 h1 {
     font-size: 22px;
     color: #171717;
@@ -84,7 +90,6 @@ p {
     align-items: center;
 }
 
-
 .box img {
     border-radius: 50%;
 }
@@ -95,7 +100,6 @@ p {
     text-align: center;
 }
 
-
 .products {
     padding-top: 30px;
 }
@@ -104,6 +108,9 @@ p {
     padding-top: 100px;
     padding-bottom: 50px;
 }
+
+/* Footer section*/
+
 
 footer {
     background-color: #171717;
@@ -175,6 +182,8 @@ footer {
     margin-top: 10px;
 }
 
+/* Menu section*/
+
 nav {
     position: relative;
     padding: 10px;
@@ -219,13 +228,16 @@ body, html {
     overflow-x: visible;
 }
 
+/* Responsive design*/
+
+
 @media (max-width: 980px) {
     nav ul {
         display: none; 
         flex-direction: column;
         background-color: #171717;
         position: absolute;
-        top: 50px;
+        top: 80px;
         right: 0;
         margin-top: 0;
     }
@@ -290,6 +302,8 @@ body {
     padding: 0;
     box-sizing: border-box;
 }
+
+/* Delivery section*/
 
 .seccion-delivery {
     background-color: #171717;
@@ -382,6 +396,8 @@ body {
 
 }
 
+/* Nuestra historia - section*/
+
 .historia-section {
     padding: 160px 290px 80px;
     background-color: #f8f9fa;
@@ -407,18 +423,18 @@ body {
 
 .valores-section {
     padding: 100px 290px 80px;
-    background-color: #e9ecef;
+    background-color: rgb(23, 23, 23);
 }
 
 .valores-section h2 {
-    font-size: 28px;
-    color: #333;
-    margin-bottom: 20px;
+    font-size: 35px;
+    color: white;
+    margin-bottom: 30px;
 }
 
 .valores-section p {
     font-size: 18px;
-    color: #555;
+    color: white;
 }
 
 .valores-section img {
@@ -426,4 +442,81 @@ body {
     width: 900px;
     height: 450px;
     border-radius: 10px;
+}
+
+/* Contact section*/
+
+.contact-section {
+    background-color: #f5f5f5;
+    padding: 220px 150px;
+
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
+    gap: 20px; 
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.contact-form, .container-img {
+    flex: 1; 
+    max-width: 500px; 
+}
+
+.container-img img {
+    width: 100%; 
+    height: auto; 
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.contact-form {
+    padding: 30px;
+    background: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.contact-title {
+    text-align: center;
+    font-size: 32px;
+    margin-bottom: 20px;
+    color: #333;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+label {
+    font-weight: bold;
+    margin-bottom: 5px;
+    display: block;
+}
+
+input, textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+.submit-button {
+    background-color: #8dbb3d;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 18px;
+    margin: auto;
+}
+
+.submit-button:hover {
+    background-color: #8dbb3d;
+    transform: scale(1.05);
 }
